--- a/index.html
+++ b/index.html
@@ -1,16 +1,30 @@
 <!DOCTYPE html>
 <html lang="en">
-    <head>
-        <title>GAL Projekt xsotol02 xdanco00</title>
-        <meta charset="UTF-8">
-        <meta name="viewport" content="width=device-width, initial-scale=1">
-        <link href="style.css" rel="stylesheet">
-        <script src="https://unpkg.com/cytoscape/dist/cytoscape.min.js"></script>
-    </head>
-    <body>
-        <h1>GAL Projekt - Demonstrace - Artikulační body a mosty</h1>
-        <div id="cy"></div>
-        <script src="app.js">
-        </script>
-    </body>
+
+<head>
+  <title>GAL Projekt xsotol02 xdanco00</title>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1">
+  <link href="style.css" rel="stylesheet">
+  <script src="https://unpkg.com/cytoscape/dist/cytoscape.min.js"></script>
+  <script defer src="app.js"></script>
+</head>
+
+<body>
+  <div class="container">
+    <div class="top-bar">
+      <h1>GAL Projekt - Demonstrace - Artikulační body a mosty</h1>
+      <button id="upload" type="button">Nahrát graf</button>
+      <button id="download" type="button">Uložit graf</button>
+    </div>
+    <div id="cy">
+      <div class="algo-controls">
+        <button id="start" type="button">Spustit algoritmus</button>
+        <button id="prev-step" type="button">&lt;</button>
+        <button id="next-step" type="button">&gt;</button>
+      </div>
+    </div>
+  </div>
+</body>
+
 </html>
