Add loading from GraphML

--- a/index.html
+++ b/index.html
@@ -16,7 +16,8 @@
       <h1>GAL Projekt - Demonstrace - Artikulační body a mosty</h1>
     </div>
     <div class="algo-controls">
-      <button id="upload" type="button">Nahrát graf</button>
+      <label class="file-upload" for="upload">Nahrát graf</label>
+      <input type="file" name="upload" id="upload" />
       <button id="download" type="button">Uložit graf</button>
       <button id="clear" type="button">Smazat graf</button>
       <button id="layout" type="button">Automatické rozložení</button>
