Refactor event handling

--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
       <div class="divider"></div>
       <button id="start-articulation" type="button">Najít artikulační body</button>
       <button id="start-bridges" type="button">Najít mosty</button>
-      <button id="start-biconnected" type="button">Najít 2-souvislé komponenty</button>
+      <button id="show-biconnected" type="button">Najít 2-souvislé komponenty</button>
     </div>
     <div id="cy">
       <div id="status-line"></div>
