Add articulation points algorithm

--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 </head>
 
 <body>
-  <div class="container algo-active">
+  <div class="container">
     <h1>GAL Projekt - Demonstrace - Artikulační body a mosty</h1>
 
     <div id="controls">
@@ -28,65 +28,19 @@
       <div class="divider"></div>
       <button id="start-articulation" type="button">Najít artikulační body</button>
       <button id="start-bridges" type="button">Najít mosty</button>
+      <div class="invisible-divider"> </div>
+      <button id="toggle-controls" type="button">Zobrazit ovládání algoritmu</button>
     </div>
 
     <section id="algo-steps">
       <h2>Algoritmus</h2>
       <div class="content">
-        <div>Step 1</div>
-        <div>Step 2</div>
-        <div class="current">Step 3</div>
-        <div>Step 2</div>
-        <div>Step 2</div>
-        <div>Step 2</div>
-        <div>Step 2</div>
-        <div>Step 2</div>
-        <div>Step 2</div>
-        <div>Step 2</div>
-        <div>Step 2</div>
-        <div>Step 2</div>
-        <div>Step 2</div>
-        <div>Step 2</div>
-        <div>Step 2</div>
-        <div>Step 2</div>
-        <div>Step 2</div>
-        <div>Step 2</div>
       </div>
     </section>
 
     <section id="algo-vars">
       <h2>Proměnné</h2>
       <div class="content">
-        {<br>
-        &ensp;"d" = {<br>
-        &ensp;&ensp;"0": null,<br>
-        &ensp;&ensp;"1": 42 <br>
-        &ensp;}<br>
-        }
-        {<br>
-        &ensp;"d" = {<br>
-        &ensp;&ensp;"0": null,<br>
-        &ensp;&ensp;"1": 42 <br>
-        &ensp;}<br>
-        }
-        {<br>
-        &ensp;"d" = {<br>
-        &ensp;&ensp;"0": null,<br>
-        &ensp;&ensp;"1": 42 <br>
-        &ensp;}<br>
-        }
-        {<br>
-        &ensp;"d" = {<br>
-        &ensp;&ensp;"0": null,<br>
-        &ensp;&ensp;"1": 42 <br>
-        &ensp;}<br>
-        }
-        {<br>
-        &ensp;"d" = {<br>
-        &ensp;&ensp;"0": null,<br>
-        &ensp;&ensp;"1": 42 <br>
-        &ensp;}<br>
-        }
       </div>
     </section>
 
