Add algorithm visibility toggle

--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
       <button id="start-articulation" type="button">Najít artikulační body</button>
       <button id="start-bridges" type="button">Najít mosty</button>
       <div class="invisible-divider"> </div>
-      <button id="toggle-controls" type="button">Zobrazit ovládání algoritmu</button>
+      <button id="toggle-controls" type="button">Skrýt ovládání algoritmu</button>
     </div>
 
     <section id="algo-steps">
