--- a/index.html
+++ b/index.html
@@ -66,7 +66,7 @@
         </button>
         <label for="anim-speed">
           <span>Rychlost animace</span>
-          <input type="range" name="anim-speed" value="100" min="1" max="100" id="anim-speed">
+          <input type="range" name="anim-speed" value="20" min="20" step="20" max="100" id="anim-speed">
         </label>
       </div>
 
