Add biconnected components

--- a/index.html
+++ b/index.html
@@ -28,6 +28,7 @@
       <div class="divider"></div>
       <button id="start-articulation" type="button">Najít artikulační body</button>
       <button id="start-bridges" type="button">Najít mosty</button>
+      <button id="show-biconnected" type="button">Ukázat 2-souvislé komponenty</button>
       <div class="invisible-divider"> </div>
       <button id="toggle-controls" type="button">Skrýt ovládání algoritmu</button>
     </div>
@@ -60,9 +61,6 @@
         </button>
         <button id="algo-finish" type="button" class="icon-button">
           <img src="img/media-skip-forward-24.png" alt="skip">
-        </button>
-        <button id="show-biconnected" type="button">
-          Ukázat 2-souvislé komponenty
         </button>
         <label for="anim-speed">
           <span>Rychlost animace</span>
