--- a/index.html
+++ b/index.html
@@ -66,6 +66,12 @@
           <span>Rychlost animace</span>
           <input type="range" name="anim-speed" value="20" min="20" step="20" max="100" id="anim-speed">
         </label>
+        <div class="art-point">
+          Artikulační body
+        </div>
+        <div class="bridge">
+          Mosty
+        </div>
       </div>
 
     </section>
